[tool.poetry]
name = "bank-activity-widget"
version = "0.1.0"
description = ""
authors = ["Anna Smirnova <you@example.com>"]
readme = "README.md"
packages = [{ include = "src/bank_activity_widget" }]

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.4"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
black = "^24.10.0"
mypy = "^1.13.0"
isort = "^5.13.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 119
exclude = ".git|README.md"

[tool.isort]
line_length = 119
multi_line_output = 1
skip = ["README.md"]

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = "venv|README.md"